<resources>
    <string name="app_name">NyMovie</string>
    <string name="title_hint">The Assistent</string>
    <string name="movie_avtar">moview avtar</string>
    <string name="headline_hint">Created Equal’ Review: A Justice of Few Words Finds His Voice</string>
    <string name="pick_desc">icon to show which movies were picked</string>
    <string name="reviewer">A. 0. Smith</string>
    <string name="failed_review_load">Failed to load movie reviews.</string>
    <string name="no_network">It seems you have lost internet.</string>
    <string name="network_available">Internet is back.</string>
    <string name="search_title">Search by title</string>
    <string name="search_hint">Search by title</string>
    <string name="detail_image">here come the big image</string>
    <string name="rating">Rating:</string>
    <string name="critics_pick">Critics Pick</string>
    <string name="screenTitle">Top Reviews</string>
    <string name="readMore">Read More…</string>
</resources>
