<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#B1B19F"
    android:padding="10dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_gravity="center"
        style="@style/Base.CardView"
        card_view:cardCornerRadius="4dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:padding="@dimen/review_item">

            <ImageView
                android:id="@+id/avtar"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/avtar_margin"
                android:contentDescription="@string/movie_avtar" />

            <TextView
                android:id="@+id/title"
                style="@style/review_item_title_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@+id/avtar"
                android:hint="@string/title_hint" />

            <TextView
                android:id="@+id/headline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/title"
                android:layout_toEndOf="@+id/avtar"
                android:hint="@string/headline_hint" />

            <ImageView
                android:id="@+id/pick"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:contentDescription="@string/pick_desc"
                card_view:srcCompat="@drawable/pick" />

            <TextView
                android:id="@+id/byline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="3dp"
                android:layout_marginBottom="5dp"
                android:hint="@string/reviewer" />

        </RelativeLayout>


    </androidx.cardview.widget.CardView>
</LinearLayout>